homework stream done homework one refactor on stream change Main