@@ -11,7 +11,9 @@ public class TaskStream {
      * @return сумма по всем книгам
      */
     public static double task1(List<Book> books) {
-        return books.stream().mapToDouble(Book::getPrice).sum();
+        return books.stream()
+                .mapToDouble(Book::getPrice)
+                .sum();
     }
 
     /**
@@ -21,7 +23,10 @@ public class TaskStream {
      * @return количество уникальных авторов
      */
     public static long task2(List<Book> books) {
-        return books.stream().map(Book::getAuthor).distinct().count();
+        return books.stream()
+                .map(Book::getAuthor)
+                .distinct()
+                .count();
     }
 
     /**
@@ -32,7 +37,8 @@ public class TaskStream {
      */
     public static Map<String, List<String>> task3(List<Book> books) {
 
-        return books.stream().collect(Collectors.toMap(Book::getTitle, Book::getReviews));
+        return books.stream()
+                .collect(Collectors.toMap(Book::getTitle, Book::getReviews));
     }
 
     /**
@@ -43,8 +49,9 @@ public class TaskStream {
      * @return ожидаемый мап
      */
     public static Map<String, List<String>> task4(List<Book> books) {
-        return books.stream().filter(book ->
-                !book.getReviews().equals(new ArrayList<>())).collect(Collectors.toMap(Book::getTitle, Book::getReviews));
+        return books.stream()
+                .filter(book -> !book.getReviews().isEmpty())
+                .collect(Collectors.toMap(Book::getTitle, Book::getReviews));
     }
 
     /**
@@ -54,7 +61,10 @@ public class TaskStream {
      * @return список отзывов
      */
     public static List<String> task5(List<Book> books) {
-        return books.stream().flatMap(t -> t.getReviews().stream()).collect(Collectors.toList());
+        return books.stream()
+                .flatMap(t -> t.getReviews()
+                        .stream())
+                .collect(Collectors.toList());
     }
 
     /**
@@ -64,7 +74,10 @@ public class TaskStream {
      * @return среднюю стоимость книги
      */
     public static double task6(List<Book> books) {
-        return books.stream().mapToDouble(Book::getPrice).average().getAsDouble();
+        return books.stream()
+                .mapToDouble(Book::getPrice)
+                .average()
+                .orElseThrow();
     }
 
     /**
@@ -75,7 +88,9 @@ public class TaskStream {
      */
     public static boolean task7(List<Book> books) {
 
-        return books.stream().map(Book::getAuthor).anyMatch(author -> author.contains("Автор"));
+        return books.stream()
+                .map(Book::getAuthor)
+                .allMatch(author -> author.contains("Автор"));
     }
 
     /**
@@ -86,7 +101,10 @@ public class TaskStream {
      */
     public static Set<String> task8(List<Book> books) {
 
-        return books.stream().map(Book::getTitle).collect(Collectors.toSet());
+        return books.stream()
+                .map(Book::getTitle)
+                .limit(3)
+                .collect(Collectors.toSet());
     }
 
     /**
@@ -97,8 +115,9 @@ public class TaskStream {
      */
     public static List<Book> task9(List<Book> books) {
 
-        return books.stream().filter(book -> book.getPrice() < 100).filter(book -> book.getTitle().matches(".*[02468]$")).collect(Collectors.toList());
-        //return new ArrayList<>();
+        return books.stream().filter(book -> book.getPrice() < 100)
+                .filter(book -> book.getTitle().matches(".*[02468].*"))
+                .collect(Collectors.toList());
     }
 
     /**
@@ -108,10 +127,7 @@ public class TaskStream {
      * @return Map с двумя ключами
      */
     public static Map<String, List<Book>> task10(List<Book> books) {
-        //return books.stream().collect(Collectors.toMap(book -> if(book.)));
-        return new HashMap<>();
-        //return books.stream().collect(Collectors.groupingBy(el -> "ok"> 50))
-        //return books.stream().collect(Collectors.partitioningBy(book -> book.getPrice() > 50));
+        return books.stream().collect(Collectors.groupingBy(book -> book.getPrice() < 50? "OK" : "Not Ok"));
     }
 
     /**
@@ -121,10 +137,8 @@ public class TaskStream {
      * @return список книг с интересными отзывами
      */
     public static List<Book> task11(List<Book> books) {
-        //return books.stream().flatMap(t-> t.getReviews().stream()).collect(Collectors.toList());
-        //return books.stream().filter(book -> book.getReviews().stream().filter(rev -> rev.contains("рекомендую")).isParallel()).collect(Collectors.toList());
-        //return books.stream().flatMap(book -> book.getReviews().stream()).filter(rev -> rev.contains("рекомендую")).collect(Collectors.toList());
-        return new ArrayList<>();
+        return books.stream().filter(book -> book.getReviews().stream().anyMatch(string -> string.toLowerCase().contains("рекомендую"))).toList();
+
     }
 
     /**
@@ -134,6 +148,8 @@ public class TaskStream {
      * @return самая дешевая книга
      */
     public static Book task12(List<Book> books) throws IllegalArgumentException {
-        return books.stream().min(Comparator.comparing(Book::getPrice)).orElseThrow();
+        return books.stream()
+                .min(Comparator.comparing(Book::getPrice))
+                .orElseThrow();
     }
 }
